# AI-Log-Detector

./: .gitignore  PLAN.md  README.md  pyproject.toml
docker/: .env.example  docker-compose.yml
docker/filebeat/: filebeat.yml
scripts/: bootstrap_kibana.py  inject_logs.py  run_demo.py
src/log_detector/: __init__.py  cli.py  data.py  evaluate.py  features.py  parse.py  paths.py  sessions.py  streaming.py
src/log_detector/models/: __init__.py  autoencoder.py  base.py  iforest.py  registry.py
tests/: fixtures.py  test_bootstrap_kibana.py  test_cli_pipeline.py  test_evaluate.py  test_features.py  test_models.py  test_parse.py  test_sessions.py  test_smoke.py  test_streaming.py
