[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-detector"
version = "0.1.0"
description = "AI-driven log anomaly detector using unsupervised ML over parsed log templates."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "POSTTTT" }]
keywords = ["logs", "anomaly-detection", "machine-learning", "elk", "isolation-forest", "autoencoder"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
parse = [
    "drain3>=0.9.11",
]
ml = [
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
torch = [
    "torch>=2.2",
]
stream = [
    "elasticsearch>=8.0,<9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
all = [
    "log-detector[parse,ml,torch,stream,dev]",
]

[project.scripts]
detect = "log_detector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
